--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@vue/test-utils": "^1.1.3",
     "@vue/vue2-jest": "^27.0.0-alpha.2",
     "babel-jest": "^27.0.6",
+    "babel-plugin-enhance-log": "^0.2.1",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
     "vue-template-compiler": "^2.6.14"
   },
-
   "eslintConfig": {
     "root": true,
     "env": {
